# KISA_Excel_Converter

./: .gitignore  README.md  pyproject.toml  step1_2024_2025_batch_runner.py  step1_common_operating_spec_excel_to_json.py  step2_2024_2025_batch_runner.py  step2_common_audit_log_excel_to_json.py  summary_doc.py
.github/workflows/: ci.yml  release.yml
src/: step1_common_operating_spec_excel_to_json.py  step2_common_audit_log_excel_to_json.py  summary_doc.py
src/batch_runner/: step1_2024_2025_batch_runner.py  step2_2024_2025_batch_runner.py
template/step1_2024-2025_small/KAIT/2024/: (주)엔라인_정보보호 관리체계 운영명세서_v1.0.xlsx  ISMS-00-02_정보보호 운영명세서_2024.xlsx  [별첨]_정보보호_및_개인정보보호_관리체계_운영명세서_양식_v2.2.xlsx
template/step1_2024-2025_small/KAIT/2025/: [폴라리스오피스][단일인증][붙임3]정보보호_관리체계_운영명세서_양식_간편인증.xlsx  붙임3-1 별첨_정보보호 및 개인정보보호 관리체계 운영명세서(한국중부발전)_v1.0 (2).xlsx  한국허벌라이프_정보보호관리체계 운영명세서_20250612.xlsx
template/step1_2024-2025_small/NISC/2024/: (별첨)_2023_유웨이어플라이_운영명세서.xlsx  03_[오라클 코퍼레이션] 정보보호 및 개인정보보호 관리체계(ISMS-P) 운영 명세서.xlsx  03_[주식회사 뱅코] 정보보호 및 개인정보보호 관리체계(ISMS-P) 운영 명세서(엑셀 별첨).xlsx  03_[주식회사 초록마을] 정보보호 및 개인정보보호 관리체계(ISMS-P) 운영 명세서(엑셀 별첨).xlsx  4. 정보보호 및 개인정보보호 관리체계 운영명세서.xlsx  KU420_00_정보보호_관리체계_운영명세서_v1.0.xlsx
template/step1_2024-2025_small/NISC/2025/: 03_[주식회사 위메이드] 정보보호 및 개인정보보호 관리체계(ISMS-P) 운영 명세서.xlsx  [CK] 정보보호 관리체계 운영명세서.xlsx  붙임4신한디에스_정보보호_및_개인정보보호_관리체계_운영명세서.xlsx  정보보호_관리체계_운영명세서_v1.4.xlsx
template/step2_2024-2025_small/NISC/: ((주) 섹타나인) 심사일지_예비결함(강나루).xlsx  ((주) 신한디에스) 심사일지_예비결함(김낙중).xlsx  ((주) 파리크라상) 심사일지_예비결함(이남규).xlsx  ((주) 현대그린푸드) ISMS인증심사일지(유세정).xlsx  ((주) 현대그린푸드) ISMS인증심사일지(이호성).xlsx
template/step2_2024-2025_small/OPA/: ((주)한글과컴퓨터) ISMS-P 심사일지(김태훈).xlsx  (㈜한섬) ISMS-P 심사일지(이종수).xlsx  (강릉아산병원) ISMS-P 심사일지(박상진).xlsx  (강릉아산병원) ISMS-P 심사일지(우진하).xlsx  (계명대학교동산의료원) ISMS-P 심사일지(김중대).xlsx
tests/: test_batch_smoke.py
(+4 files in other folders)
